# src/controllers/commentController.js
@@ -1,7 +1,7 @@
 const fs = require("fs");
 const path = require("path");
 const fileName = path.join(__dirname, "../../database/data.json");
-class PostController {
+class commentController {
   async insertPost(req, res) {
     try {
       const { title, text, userId } = req.body;
@@ -16,7 +16,7 @@ class PostController {
     }
   }
 
-  async getAllPosts(req, res) {
+  async getAllComments(req, res) {
     fs.readFile(fileName, "utf-8", (err, data) => {
       if (err) {
         console.log(err);
@@ -24,7 +24,8 @@ class PostController {
         return;
       }
       const jsonData = JSON.parse(data);
-      res.json(jsonData.posts);
+      const foundComments = jsonData.comments.filter(item => item.postId == req.params.postId);
+      res.json(foundComments);
     });
   }
 
@@ -39,17 +40,26 @@ class PostController {
     }
   }
 
-  async deletePost(req, res) {
-    try {
-      const { postId } = req.params;
-      await this.postsModel.destroy({ where: { id: postId } });
-      res.status(200);
-    } catch ({ status = 500, message = "Serverside error" }) {
-      res.status(status).send(message);
-    }
+  async deleteComment(req, res) {
+    fs.readFile(fileName, "utf-8", (err, data) => {
+      if (err) {
+        console.log(err);
+        res.sendStatus(500);
+        return;
+      }
+      const jsonData = JSON.parse(data);
+      const foundComments = jsonData.comments.filter(item => item.postId == req.params.postId);
+      const filteredComments = foundComments.filter(item => item.id != req.params.commentId);
+      const newFile = JSON.stringify({ ...jsonData, comments: filteredComments });
+      fs.writeFile(fileName, newFile, err => {
+        if (err) throw err;
+        console.log("The file has been saved!");
+        res.status(200).end();
+      });
+    });
   }
 }
 
 module.exports = () => {
-  return new PostController();
+  return new commentController();
 };
