# src/models/posts.js
@@ -1,46 +1,0 @@
-module.exports = (sequelize, DataTypes) => {
-  const Posts = sequelize.define(
-    "Posts",
-    {
-      id: {
-        type: DataTypes.UUID,
-        defaultValue: DataTypes.UUIDV4,
-        allowNull: false,
-        primaryKey: true
-      },
-      title: {
-        type: DataTypes.STRING,
-        allowNull: false
-      },
-      text: {
-        type: DataTypes.TEXT,
-        allowNull: false
-      },
-      userId: {
-        type: DataTypes.INTEGER,
-        allowNull: false
-      },
-      createdAt: {
-        type: DataTypes.DATE,
-        allowNull: false,
-        defaultValue: DataTypes.NOW
-      },
-      updatedAt: {
-        type: DataTypes.DATE,
-        allowNull: false,
-        defaultValue: DataTypes.NOW
-      }
-    },
-    {
-      timestamps: true
-    }
-  );
-  Posts.associate = models => {
-    Posts.hasMany(models.Comments, {
-      foreignKey: "postId",
-      sourceKey: "id",
-      as: "comments"
-    });
-  };
-  return Posts;
-};
